# erroneous-payment-detection

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CODEBASE_EXPLANATION.md  DETECTION_SYSTEM.md  LLM_RAG_INTEGRATION.md  PRESENTATION.md  PRESENTATION_README.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RAG_EXPLANATION.md  RAG_SYSTEM.md  README.md  RISK_SCORING.md  SIMPLIFIED_POC_FINAL.md  claude.md  convert_to_pptx.sh  payment_risk_report_20260309_010325.txt  pyproject.toml  run_dashboard.py  run_detection.py  test_rag_system.py  train_ml_model.py
.claude/: settings.local.json
data/chroma/: chroma.sqlite3
docs/: architecture.drawio  architecture_walkthrough.md  ml_explanation.md
src/: __init__.py
src/agents/: __init__.py  base.py  resolution_agent.py
src/agents/llm_engine/: __init__.py  analyzer.py
src/agents/ml_engine/: __init__.py  detector.py
src/agents/orchestration/: __init__.py  orchestrator.py
src/agents/risk_scoring/: __init__.py  scorer.py
src/agents/rule_engine/: __init__.py  detector.py
src/config/: __init__.py  settings.py
src/data/: __init__.py
src/data/sample/: arrangement_clearing_dra.csv  collateral_movement.csv
src/database/: README.md  __init__.py  connection.py  create_trade_details.py  load_csv_data.py  setup_database.py
src/mcp_servers/: __init__.py
src/mcp_servers/rag_tool/: server.py
src/mcp_servers/sql_server_tool/: __init__.py  server.py
src/rag/: __init__.py  indexer.py  sample_incidents.py
src/ui/: __init__.py  dashboard.py
tests/: __init__.py
